# picolata

./: .clangd  .gitignore  .prettierrc  CMakeLists.txt  README.md  start-openocd.sh
cmake/: pico_sdk_import.cmake
picolata/: main.cpp
picolata/include/: Application.hpp  MPU6050_6Axis_MotionApps_V6_12.h  SenderInterface.hpp  UDPSender.hpp  adc.hpp  modernosc.hpp  mpu6050.hpp  network.hpp  tinyosc.hpp
picolata/src/: Application.cpp  UDPSender.cpp  adc.cpp  modernosc.cpp  mpu6050.cpp  network.cpp  tinyosc.cpp
src/: main.c  main.cpp  osc.c  tinyosc.c
src/app/: app.cpp  app.hpp  tinyosc.c
src/include/: PicoOSC.hpp  lwipopts.h
src/tinyosc/: tinyosc.cpp  tinyosc.hpp
